@@ -1,6 +1,7 @@
 caputils-0.7.12
 ---------------
 
+	* fix: [capfilter] suppress output
 	* fix: [capmerge] fixing sorting regression from previous release.
 
 caputils-0.7.11
